# actions-toy

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  build_wheels.sh  ci_setup.sh  publish.yml  upload_wheels.sh
actiontoy/: __init__.py
actiontoy/dot_product/: calc_dot.f90
test/: test_dot.py
tests/: test_dot.py
toy/: __init__.py
toy/dot_product/: calc_dot.pyf  dot_product.pyf
