[project]
name = "toy"
version = "0.1.0"
description = "A toy package with vector operations"
dependencies = ["numpy"]

[build-system]
requires = [
    "scikit-build-core",
    "meson",
    "numpy>=2.0.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
sdist.exclude = [
    ".github",
    "**/*.pyf",
    "**/*.f90",
    "**/*.F",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest"
before-all = "yum -y install blas-devel"
