[project]
name = "actiontoy"
description = "A toy package with vector operations"
dependencies = ["numpy"]
dynamic = ["version"]
readme = "README.md"

[project.urls]
Homepage = "https://github.com/Dayou-Zhang/actions-toy"

[build-system]
requires = [
    "scikit-build-core",
    "numpy>=2.0.2",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "actiontoy/_version.py"
regex = '''__version__ = "(?P<version>[^"]+)"'''
result = "{version}"

[tool.scikit-build]
sdist.exclude = [
    ".github",
    "**/*.pyf",
    "**/*.f90",
    "**/*.F",
]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
before-all = "yum -y install openblas-devel"
